runtimeconfig使う形に修正

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # AWSのクレデンシャルを記載します
-AWS_ENDPOINT_URL_DYNAMODB=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+NUXT_AWS_ENDPOINT_URL_DYNAMODB=
+NUXT_AWS_ACCESS_KEY_ID=
+NUXT_AWS_SECRET_ACCESS_KEY=
