--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build  --dotenv .env.production.local",
+    "build": "nuxt build --dotenv .env.production.local",
     "dev": "nuxt dev --dotenv .env.development.local",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -16,6 +16,7 @@
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "nuxt": "^3.8.2",
+    "serverless": "^3.38.0",
     "typescript": "^5.3.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
